force-app/main/default/objects/LMRA__c/LMRA__c.object-meta.xml
<CustomObject>
    <label>LMRA</label>
    <nameField>
        <displayFormat>LMRA-{00000000}</displayFormat>
        <label>LMRA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LMRA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>