force-app/main/default/objects/LMRA__c/fields/Corrective_Measures__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Measures__c</fullName>
    <label>Corrective Measures</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>