force-app/main/default/objects/LMRA__c/fields/EPC_EPI_CBM_PBM__c.field-meta.xml
<CustomField>
    <fullName>EPC_EPI_CBM_PBM__c</fullName>
    <label>EPC - EPI/CBM - PBM</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>