force-app/main/default/objects/LMRA__c/fields/Limited_LMRA_Done__c.field-meta.xml
<CustomField>
    <fullName>Limited_LMRA_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Limited LMRA Done</label>
    <type>Checkbox</type>
</CustomField>