force-app/main/default/objects/LMRA__c/fields/LMRA_Ok__c.field-meta.xml
<CustomField>
    <fullName>LMRA_Ok__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LMRA Ok?</label>
    <type>Checkbox</type>
</CustomField>