force-app/main/default/objects/LMRA__c/fields/Other_Risks__c.field-meta.xml
<CustomField>
    <fullName>Other_Risks__c</fullName>
    <label>Other Risks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>