force-app/main/default/objects/LMRA__c/fields/Project_Lead__c.field-meta.xml
<CustomField>
    <fullName>Project_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Lead</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>LMRA</relationshipLabel>
    <relationshipName>LMRA</relationshipName>
    <type>Lookup</type>
</CustomField>