force-app/main/default/objects/LMRA__c/fields/Surrounding_Risks__c.field-meta.xml
<CustomField>
    <fullName>Surrounding_Risks__c</fullName>
    <label>Surrounding Risks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>