force-app/main/default/objects/LMRA__c/fields/Tasks_of_the_Day__c.field-meta.xml
<CustomField>
    <fullName>Tasks_of_the_Day__c</fullName>
    <label>Tasks of the Day</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>