force-app/main/default/objects/LMRA__c/fields/Thermal_Burner_Used__c.field-meta.xml
<CustomField>
    <fullName>Thermal_Burner_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Thermal Burner Used</label>
    <type>Checkbox</type>
</CustomField>