force-app/main/default/objects/LMRA__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>LMRA</relationshipLabel>
    <relationshipName>LMRA</relationshipName>
    <type>Lookup</type>
</CustomField>